--- a/bomberos-app/src/styles.scss
+++ b/bomberos-app/src/styles.scss
@@ -1,4 +1,5 @@
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&display=swap');
 
 
 
@@ -57,4 +58,8 @@ app-root {
 
   height: 100%;
 
+}
+
+.forbidden-snackbar .mdc-snackbar__surface {
+  background: #c62828;
 }
