fix: added another part to generate the htaccess file needed for production work properly

--- a/bomberos-app/src/app/components/modules-overview/modules-overview.html
+++ b/bomberos-app/src/app/components/modules-overview/modules-overview.html
@@ -12,7 +12,7 @@
   <header class="modules-header">
     <h1>Explora los modulos disponibles</h1>
     <p class="modules-description">
-      Elige el mИdulo con el que deseas trabajar para continuar con tus tareas operativas.
+      Elige el módulo con el que deseas trabajar para continuar con tus tareas operativas.
     </p>
   </header>
 
