--- a/bomberos-app/src/app/components/modules-overview/modules-overview.html
+++ b/bomberos-app/src/app/components/modules-overview/modules-overview.html
@@ -2,6 +2,7 @@
   <div class="modules-topbar">
     <div class="modules-topbar__left">
       <p class="modules-eyebrow">Panel principal</p>
+      <p class="modules-greeting">{{ greeting() }}</p>
     </div>
     <button mat-stroked-button color="warn" (click)="logout()">
       <mat-icon>logout</mat-icon>
