--- a/bomberos-app/src/app/components/modules-overview/modules-overview.scss
+++ b/bomberos-app/src/app/components/modules-overview/modules-overview.scss
@@ -30,6 +30,13 @@
   margin-bottom: 0.75rem;
 }
 
+.modules-greeting {
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 600;
+  color: rgba(0, 0, 0, 0.7);
+}
+
 .modules-description {
   color: rgba(0, 0, 0, 0.65);
   max-width: 560px;
