--- a/bomberos-app/src/app/components/create-report/create-report.scss
+++ b/bomberos-app/src/app/components/create-report/create-report.scss
@@ -108,6 +108,9 @@
   width: 100%; 
   position: relative;
   border-radius: 4px;
+  touch-action: none;
+  user-select: none;
+  overscroll-behavior: contain;
   
   canvas {
     width: 100% !important;
